test_programs/compile_failure/comptime_apply_failing_range_constraint/src/main.nr
fn main() {
    comptime {
        256.assert_max_bit_size::<8>()
    }
}
